--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>IPF - Intelligent Finance Planning</title>
+	<title>GSGC - GSG Consultancy</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -83,9 +83,9 @@
 		   <div class="twelve columns">
 
 			   <div class="hero-text">
-				   <h1 class="responsive-headline">Intelligent Finance Planning</h1>
+				   <h1 class="responsive-headline">GSG Consultancy</h1>
 
-				   <p>Bespoke mortgage solutions to help open the door to your dream home or remortgage.</p>
+				   <p>Local affordable I.T support and Web design/Maintenance.</p>
 			   </div>
 
             <div class="buttons">
@@ -94,7 +94,7 @@
             </div>
 
             <div class="hero-image">
-               <img src="images/iStock.jpg" alt="" />
+               <img src="images/support.png" alt="" />
             </div>
 
 		   </div>
