some content added

--- a/index.html
+++ b/index.html
@@ -111,13 +111,11 @@
       <div class="row feature design">
 
          <div class="six columns right">
-            <h3>Call us now on 0121 2850701.</h3>
+            <h3>CALL US NOW ON 078 5069 3268.</h3>
 
-            <p>To discuss your requirements or to arrange an initial no cost or obligation meeting
+            <p>To discuss your requirements or to arrange an initial no cost or obligation meeting, we will take time and listen to you in order to understand the requirements of what is needed regading the level of I.T support and web design.
 
-Our typical broker fee is £395 payable only on receipt of a mortgage offer
 
-Your home will be repossessed if you do not keep up repayments on your mortgage
             </p>
          </div>
 
@@ -130,9 +128,9 @@ Your home will be repossessed if you do not keep up repayments on your mortgage
       <div class="row feature responsive">
 
          <div class="six columns left">
-            <h3>MORTGAGES.</h3>
+            <h3>I.T SUPPORT.</h3>
 
-            <p>We will help find you the most suitable mortgage for your situation as they are able to compare products from a comprehensive panel of mortgage providers. We also often have access through our Network First Complete to exclusive products, which could offer better value than products available elsewhere.
+            <p>We will help find you the most suitable support pacakge for your situation as we are able to offer 1st,2nd and 3rd line support to meet the business requirements. we have highly dedicated and quilfied technicains.
             </p>
 			<a class="button trial" href="http://www.intelligentfinanceplanning.co.uk/mortgages/our-service/">MORTGAGES</a>
          </div>
@@ -147,9 +145,9 @@ Your home will be repossessed if you do not keep up repayments on your mortgage
 
          <div class="six columns right">
 		 
-            <h3>INSURANCE.</h3>
+            <h3>WEB DESIGN.</h3>
 
-            <p>Our advisors at Intelligent Finance Planning Ltd will look at your individual circumstances and use our comparison software to search for the most suitable insurance policies for you. Your advisor will take into account your demands and needs, comparing the policies available from providers on our panel, which include:
+            <p>Our advisors at GSG Consulatncy will look at your individual requirements and design a website suited for the organisation, once agiain depending on the complexsity of the website we can talior make a package that is affordable and adaptable to your needs.
             </p>
 			<a class="button trial" href="http://www.intelligentfinanceplanning.co.uk/insurance/our-service/">INSURANCE</a>
          </div>
