--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
    <header>
 
       <div class="logo">
-         <a class="smoothscroll" href="#hero"><img alt="" src="images/logo.jpg"></a>
+         <a class="smoothscroll" href="#hero"><img alt="" src="images/logo.png"></a>
       </div>
 
       <nav id="nav-wrap">         
@@ -120,7 +120,7 @@
          </div>
 
          <div class="six columns feature-media left">
-             <img src="images/logo2.png" alt="" />
+             <img src="images/logo.png" alt="" />
          </div>
 
       </div>
@@ -132,11 +132,11 @@
 
             <p>We will help find you the most suitable support pacakge for your situation as we are able to offer 1st,2nd and 3rd line support to meet the business requirements. we have highly dedicated and quilfied technicains.
             </p>
-			<a class="button trial" href="http://www.intelligentfinanceplanning.co.uk/mortgages/our-service/">MORTGAGES</a>
+			<a class="button trial" href="">I.T Support</a>
          </div>
 
          <div class="six columns feature-media right">
-             <img src="images/iStock.jpg" alt="" align="right" />
+             <img src="images/logo3.png" alt="" align="right" />
          </div>
 
       </div>
@@ -145,15 +145,15 @@
 
          <div class="six columns right">
 		 
-            <h3>WEB DESIGN.</h3>
+            <h3>WEB SERVICES.</h3>
 
             <p>Our advisors at GSG Consulatncy will look at your individual requirements and design a website suited for the organisation, once agiain depending on the complexsity of the website we can talior make a package that is affordable and adaptable to your needs.
             </p>
-			<a class="button trial" href="http://www.intelligentfinanceplanning.co.uk/insurance/our-service/">INSURANCE</a>
+			<a class="button trial" href="">Web Services</a>
          </div>
 
          <div class="six columns feature-media left">
-             <img src="images/logo2.png" alt="" />
+             <img src="images/web.png" alt="" />
          </div>
 
       </div>
@@ -161,15 +161,15 @@
       <div class="row feature video">
 
          <div class="six columns left">
-            <h3>SERIOUS ILLNESS COVER.</h3>
+            <!-- <h3>SERIOUS ILLNESS COVER.</h3> -->
 
-            <p>1) Serious Illness Cover – Pays out a cash lump sum on diagnosis of one the illnesses covered
-175 Illnesses covered under comprehensive cover and 114 on primary cover compared to around 45 on a conventional critical illness plan which is the nearest equivalent
-Part payments made for earlier stage or less serious illnesses where other providers might nothing (any unused cover remains in place)
-Cover booster option means it would pay at least 100% of the sum assured on all illnesses covered which are the equivalent of a critical illness plan and in some cases up to 200% of the sum assured for debilitating illnesses with long term consequences.
-Incredibly comprehensive cancer cover that covers more cancers than any other provider and is 116% more likely to pay out than the standard cancer definition on a critical illness plan
-Pays out on all heart attacks and all strokes
-            </p>
+            <!-- <p>1) Serious Illness Cover – Pays out a cash lump sum on diagnosis of one the illnesses covered -->
+<!-- 175 Illnesses covered under comprehensive cover and 114 on primary cover compared to around 45 on a conventional critical illness plan which is the nearest equivalent -->
+<!-- Part payments made for earlier stage or less serious illnesses where other providers might nothing (any unused cover remains in place) -->
+<!-- Cover booster option means it would pay at least 100% of the sum assured on all illnesses covered which are the equivalent of a critical illness plan and in some cases up to 200% of the sum assured for debilitating illnesses with long term consequences. -->
+<!-- Incredibly comprehensive cancer cover that covers more cancers than any other provider and is 116% more likely to pay out than the standard cancer definition on a critical illness plan -->
+<!-- Pays out on all heart attacks and all strokes -->
+            <!-- </p> -->
          </div>
 
 		 
@@ -504,9 +504,7 @@ Pays out on all heart attacks and all strokes
 
                      <li>
                         <blockquote>
-                           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                           Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                           nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+                           <p>text 
                            </p>
                            <cite>Mr. Adobe</cite>
                         </blockquote>
@@ -588,8 +586,7 @@ Pays out on all heart attacks and all strokes
             </div>
 
             <p>
-Intelligent Finance Planning Ltd is registered in England at 134 Sandon Road, Bearwood, Birmingham, West Midlands, England, B66 4AB (number 04254437). Intelligent Finance Planning Ltd is an appointed representative of First Complete Ltd, NO.2 Methuen Park, Bath Road, Chippenham, Wiltshire, SN14 0GB, which is authorised and regulated by the Financial Conduct Authority (FRN: 435779) for mortgage and non-investment insurance advice. The Financial Conduct Authority does not regulate some forms of Buy to Let.
-            </p>
+         </p>
 
          </div>
 
@@ -600,9 +597,9 @@ Intelligent Finance Planning Ltd is registered in England at 134 Sandon Road, Be
                <div class="columns">
                   <h3 class="address">Come Visit</h3>
                   <p>
-                  134 Sandon Rd<br>
-                  Smethwick<br>
-                  B66 4AB
+                  168 Bell Green Road<br>
+                  Coventry<br>
+                  CV6 7GX
                   </p>
                </div>
 
@@ -618,9 +615,9 @@ Intelligent Finance Planning Ltd is registered in England at 134 Sandon Road, Be
                <div class="columns last">
                   <h3 class="contact">Contact Us</h3>
                   <ul>
-                    <li><a href="tel:0121 2850701">0121 2850701</a></li>
-                    <li><a href="tel:0121 2850701">0121 2850701</a></li>
-                    <li><a href="mailto:someone@ipf.com">someone@ipf.com</a></li>
+                    <li><a href="tel:078 5069 3268">078 5069 3268</a></li>
+                    <!-- <li><a href="tel:0121 2850701">0121 2850701</a></li> -->
+                    <li><a href="gurdip-g@hotmail.co.uk">gurdip-g@hotmail.co.uk</a></li>
                   </ul>
                </div>
 
@@ -628,7 +625,7 @@ Intelligent Finance Planning Ltd is registered in England at 134 Sandon Road, Be
 
          </div>
 
-         <p class="copyright">&copy; 2018 | Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></p>
+         <!-- <p class="copyright">&copy; 2018 | Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></p> -->
 
          <div id="go-top">
             <a class="smoothscroll" title="Back to Top" href="#hero"><i class="icon-up-open"></i></a>
